packages/qwik/src/components/ag-ui-client/useAgent.module.css
.use-agent {
  --agent-ui-width: clamp(300px, 100%, 500px);

  margin: 0;
  padding: 0;
  width: 100%;
  height: 100%;
  overflow-y: auto;
  scrollbar-color: gray transparent;
  scrollbar-gutter: stable;
  scrollbar-width: thin;
  display: flex;
  flex-direction: column;

  .agent-container {
    flex: 1;
    margin: 0 auto;
    padding: 0;
    width: var(--agent-ui-width);

    .messages {
      position: relative;
      box-sizing: border-box;
      width: 100%;
      margin: 0;
      padding: 0 0 50dvh 0;

      .error {
        box-sizing: border-box;
        padding: 0.5rem;
        border-radius: 0.25rem;
        display: flex;
        align-items: flex-start;
        justify-content: flex-start;
        gap: 0.5rem;
        background-color: oklch(from #c56565 l c h / 0.1);
      }
    }
  }

  .agent-input-container {
    width: 100%;
    flex-shrink: 0;
    position: sticky;
    bottom: 0;

    .agent-input {
      width: var(--agent-ui-width);
      box-sizing: border-box;
      height: min-content;
      margin: 0 auto;

      .prompt-template-container {
        width: 100%;
        display: flex;
        flex-direction: row;
        gap: 0.5rem;
        flex-wrap: wrap;
        margin-block-end: 0.5rem;
        align-items: center;
        justify-content: center;

        .prompt-template-tip {
          display: inline-flex;
          padding: 0.5rem;
          cursor: pointer;
          gap: 0.5rem;
          box-shadow: 0 0 0.25rem rgba(0, 0, 0, 0.1);
          background-color: white;
          border-radius: 1rem;
          transition: opacity 200ms;

          &:hover {
            opacity: 0.5;
          }
        }
      }
    }
  }
}

.clickable-icon {
  display: inline-flex;
  justify-content: center;
  align-items: center;
  padding: 0.25rem;
  border-radius: 0.25rem;
  transition: background-color 200ms;
  cursor: pointer;

  &:hover {
    background-color: oklch(from gray l c h / 0.25);
  }
}

